| Bug #36777 | Warnings are raised as errors | ||
|---|---|---|---|
| Submitted: | 17 May 2008 16:12 | Modified: | 23 Nov 2009 15:14 |
| Reporter: | Davi Arnaut | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Errors | Severity: | S3 (Non-critical) |
| Version: | 5.0 | OS: | Any |
| Assigned to: | Davi Arnaut | Target Version: | |
| Triage: | D4 (Minor) | ||
[17 May 2008 16:12]
Davi Arnaut
[19 May 2008 22:59]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/46835 ChangeSet@1.2637, 2008-05-19 19:59:16-03:00, davi@mysql.com +30 -0 Bug#36777: Warnings are raised as errors Various warning conditions may be improperly pushed with a error level. This is wrong and unnecessary because it might be improperly handled (SP handlers) if not under strict mode and if strict mode is set, all warnings will be automatically elevated to errors. The solution is to issue warnings only with the warning a default severity level of 'warning' and let the error system elevate it to a error if necessary. The error codes for warnings that could possibly be raise with a error level are: ER_DIVISION_BY_ZERO 1365 ER_TRUNCATED_WRONG_VALUE 1292 ER_BINLOG_PURGE_FATAL_ERR 1377 ER_INVALID_CHARACTER_STRING 1300 ER_WRONG_VALUE_FOR_TYPE 1411 ER_ZLIB_Z_DATA_ERROR 1259 ER_TOO_BIG_FOR_UNCOMPRESS 1256 ER_WRONG_PARAMETERS_TO_NATIVE_FCT 1583 ER_VIEW_CHECK_FAILED 1369
[14 Jul 2008 12:49]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/49673 2678 Davi Arnaut 2008-07-14 Bug#36777: Warnings are raised as errors Various warning conditions may be improperly pushed with a error level. This is wrong and unnecessary because it might be improperly handled (SP handlers) if not under strict mode and if strict mode is set, all warnings will be automatically elevated to errors. The solution is to issue warnings only with the warning a default severity level of 'warning' and let the error system elevate it to a error if necessary. The error codes for warnings that could possibly be raise with a error level are: ER_DIVISION_BY_ZERO 1365 ER_TRUNCATED_WRONG_VALUE 1292 ER_BINLOG_PURGE_FATAL_ERR 1377 ER_INVALID_CHARACTER_STRING 1300 ER_WRONG_VALUE_FOR_TYPE 1411 ER_ZLIB_Z_DATA_ERROR 1259 ER_TOO_BIG_FOR_UNCOMPRESS 1256 ER_WRONG_PARAMETERS_TO_NATIVE_FCT 1583 ER_VIEW_CHECK_FAILED 1369
[14 Jul 2008 12:50]
Davi Arnaut
Queued to 6.0-runtime
[14 Jul 2008 12:52]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/49674 2678 Davi Arnaut 2008-07-14 Bug#36777: Warnings are raised as errors Various warning conditions may be improperly pushed with a error level. This is wrong and unnecessary because it might be improperly handled (SP handlers) if not under strict mode and if strict mode is set, all warnings will be automatically elevated to errors. The solution is to issue warnings only with the warning a default severity level of 'warning' and let the error system elevate it to a error if necessary. The error codes for warnings that could possibly be raise with a error level are: ER_DIVISION_BY_ZERO 1365 ER_TRUNCATED_WRONG_VALUE 1292 ER_BINLOG_PURGE_FATAL_ERR 1377 ER_INVALID_CHARACTER_STRING 1300 ER_WRONG_VALUE_FOR_TYPE 1411 ER_ZLIB_Z_DATA_ERROR 1259 ER_TOO_BIG_FOR_UNCOMPRESS 1256 ER_WRONG_PARAMETERS_TO_NATIVE_FCT 1583 ER_VIEW_CHECK_FAILED 1369
[15 Jul 2008 0:08]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/49726 2679 Davi Arnaut 2008-07-14 Bug#36777: Warnings are raised as errors Post-merge fixes: update more test case results.
[15 Jul 2008 0:09]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/49727 2679 Davi Arnaut 2008-07-14 Bug#36777: Warnings are raised as errors Post-merge fixes: update more test case results.
[16 Jul 2008 19:01]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/49887 2680 Konstantin Osipov 2008-07-16 Code cleanup.
[7 Aug 2008 3:01]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/51061 2749 Davi Arnaut 2008-08-06 [merge] Merge mysql-6.0 into mysql-6.0-bugteam
[7 Aug 2008 3:06]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/51062 2749 Davi Arnaut 2008-08-07 [merge] Merge mysql-6.0 into mysql-6.0-bugteam
[7 Aug 2008 3:16]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/51063 2749 Davi Arnaut 2008-08-07 [merge] Merge mysql-6.0 into mysql-6.0-bugteam
[7 Aug 2008 18:39]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/51138 2744 Marc Alff 2008-08-07 [merge] Merge mysql-6.0-bugteam -> local bugfix branch
[14 Sep 2008 0:03]
Bugs System
Pushed into 6.0.6-alpha (revid:davi.arnaut@sun.com-20080715000643-ht7b9rimp894vd01) (version source revid:lars-erik.bjork@sun.com-20080717135217-z3zlwwy465hmc20e) (pib:3)
[15 Sep 2008 19:10]
Paul DuBois
Noted in 6.0.6 changelog. Some warnings were being reported as errors.
[23 Nov 2009 13:23]
Konstantin Osipov
This bug fix was ported to Betony together with SIGNAL/RESIGNAL.
[23 Nov 2009 15:14]
Paul DuBois
Noted in 5.5.0 changelog.
