Bug#36777: Warnings are raised as errors

Various warning conditions may be improperly pushed with a
error level. This is wrong and unnecessary because it might
be improperly handled (SP handlers) if not under strict mode
and if strict mode is set, all warnings will be automatically
elevated to errors.

The solution is to issue warnings only with the warning a
default severity level of 'warning' and let the error system
elevate it to a error if necessary.

The error codes for warnings that could possibly be raise
with a error level are:

ER_DIVISION_BY_ZERO                 1365
ER_TRUNCATED_WRONG_VALUE            1292
ER_BINLOG_PURGE_FATAL_ERR           1377
ER_INVALID_CHARACTER_STRING         1300
ER_WRONG_VALUE_FOR_TYPE             1411
ER_ZLIB_Z_DATA_ERROR                1259
ER_TOO_BIG_FOR_UNCOMPRESS           1256
ER_WRONG_PARAMETERS_TO_NATIVE_FCT   1583
ER_VIEW_CHECK_FAILED                1369